Installed ffmeg and ffprobe to prod continer

--- a/containers/prod/Dockerfile
+++ b/containers/prod/Dockerfile
@@ -1,6 +1,10 @@
 FROM python:3.8-slim-buster
 WORKDIR /sitas-dl-yt
 
+RUN apt update
+RUN apt install -y ffmpeg
+RUN apt install -y ffprobe
+
 COPY ./ ./
 RUN pip3 install -r requirements.txt
 
