Remove ffprobe, not tested

--- a/containers/prod/Dockerfile
+++ b/containers/prod/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /sitas-dl-yt
 
 RUN apt update
 RUN apt install -y ffmpeg
-RUN apt install -y ffprobe
+#RUN apt install -y ffprobe
 
 COPY ./ ./
 RUN pip3 install -r requirements.txt
