--- a/containers/test/Dockerfile
+++ b/containers/test/Dockerfile
@@ -6,10 +6,10 @@ RUN pip3 install pytest pytest-mock mock pytest-coverage requests
 COPY ./src ./
 RUN pip3 install -r requirements.txt
 
-ARG RABBITMQ_ENDPOINT
-ARG RABBITMQ_VHOST
-ARG RABBITMQ_USER
-ARG RABBITMQ_PASS
+ARG AZURE_SERVICE_BUS_CONNECTION_STRING
+ARG AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_YOUTUBE_QUEUE
+ARG AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_QUEUE
+ARG AZURE_SERVICE_BUS_DOWNLOAD_COMPLETED_QUEUE
 ARG DOWNLOAD_REQUEST_EXCHANGE
 ARG DOWNLOAD_REQUEST_YOUTUBE_QUEUE
 ARG DOWNLOAD_COMPLETED_EXCHANGE
@@ -20,10 +20,10 @@ ARG MINIO_INTERNAL_PASS
 ARG MINIO_INTERNAL_BUCKET
 ARG YOUTUBE_API_KEY
 
-ENV RABBITMQ_ENDPOINT=${RABBITMQ_ENDPOINT}
-ENV RABBITMQ_VHOST=${RABBITMQ_VHOST}
-ENV RABBITMQ_USER=${RABBITMQ_USER}
-ENV RABBITMQ_PASS=${RABBITMQ_PASS}
+ENV AZURE_SERVICE_BUS_CONNECTION_STRING=${AZURE_SERVICE_BUS_CONNECTION_STRING}
+ENV AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_YOUTUBE_QUEUE=${AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_YOUTUBE_QUEUE}
+ENV AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_QUEUE=${AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_QUEUE}
+ENV AZURE_SERVICE_BUS_DOWNLOAD_COMPLETED_QUEUE=${AZURE_SERVICE_BUS_DOWNLOAD_COMPLETED_QUEUE}
 ENV DOWNLOAD_REQUEST_EXCHANGE=${DOWNLOAD_REQUEST_EXCHANGE}
 ENV DOWNLOAD_REQUEST_YOUTUBE_QUEUE=${DOWNLOAD_REQUEST_YOUTUBE_QUEUE}
 ENV DOWNLOAD_COMPLETED_EXCHANGE=${DOWNLOAD_COMPLETED_EXCHANGE}
