--- a/kube/sitas-downloaders-youtube-deploy.yaml
+++ b/kube/sitas-downloaders-youtube-deploy.yaml
@@ -18,25 +18,19 @@ spec:
           resources:
             limits:
               memory: 1Gi
-              cpu: 1
+              cpu: "1"
           env: 
-            - name: RABBITMQ_ENDPOINT
-              value: "goose-01.rmq2.cloudamqp.com"
-            - name: RABBITMQ_VHOST
-              value: oaoesvtq
-            - name: RABBITMQ_USER
-              value: oaoesvtq
-            - name: RABBITMQ_PASS
+            - name: AZURE_SERVICE_BUS_CONNECTION_STRING
               valueFrom:
                 secretKeyRef:
                   name: sitas-downloaders-youtube-secret
-                  key: RABBITMQ_PASS
-            - name: DOWNLOAD_REQUEST_EXCHANGE
-              value: sitas-prod-exchange-downloadrequest
-            - name: DOWNLOAD_REQUEST_YOUTUBE_QUEUE
-              value: sitas-prod-queue-downloadrequest-youtube
-            - name: DOWNLOAD_COMPLETED_EXCHANGE
-              value: sitas-prod-exchange-downloadcompleted
+                  key: AZURE_SERVICE_BUS_CONNECTION_STRING
+            - name: AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_QUEUE
+              value: download-request-prod
+            - name: AZURE_SERVICE_BUS_DOWNLOAD_REQUEST_YOUTUBE_QUEUE
+              value: download-request-youtube-prod
+            - name: AZURE_SERVICE_BUS_DOWNLOAD_COMPLETED_QUEUE
+              value: download-completed-prod
             - name: MINIO_INTERNAL_ENDPOINT
               value: oscarvx00.ddns.net
             - name: MINIO_INTERNAL_PORT
